@@ -130,6 +130,12 @@ task contract(type: Test, description: 'Runs the pact contract tests.', group: '
 
 }
 
+task fortifyScan(type: JavaExec, description: 'Run fortify scan.')  {
+  getMainClass().set("uk.gov.hmcts.fortifyclient.FortifyClientMainApp")
+  classpath += sourceSets.test.runtimeClasspath
+  jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
+}
+
 checkstyle {
   maxWarnings = 0
   toolVersion = '10.12.0'
@@ -397,6 +403,8 @@ dependencies {
   testImplementation(group: 'org.springframework.cloud', name: 'spring-cloud-contract-wiremock', version: '3.1.6') {
     exclude group: "com.github.tomakehurst", module: "wiremock-standalone"
   }
+
+  testImplementation group: 'com.github.hmcts', name: 'fortify-client', version: '1.3.0'
 
   integrationTestImplementation sourceSets.main.runtimeClasspath
   integrationTestImplementation sourceSets.test.runtimeClasspath
